# agda2scala

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  agda2scala.cabal
.github/: renovate.json
.github/workflows/: code-scan.yml  haskell.yml  security-code-scanning.yml  security.yaml  submit-deps.yaml
app/: Main.hs
examples/: adts.agda  adts.scala  rbt.agda
scala2/: build.sbt
scala2/project/: plugins.sbt
scala2/src/main/scala/examples/: adts.scala  rbt.scala
scala2/src/test/scala/examples/: RedBlackTreeSpec.scala  RgbSpec.scala
scala3/: build.sbt
scala3/project/: plugins.sbt
scala3/src/main/scala/examples/: adts.scala  rbt.scala
scala3/src/test/scala/examples/: RedBlackTreeSpec.scala  RgbSpec.scala
src/Agda/Compiler/Scala/: AgdaToScalaExpr.hs  Backend.hs  Compile.hs  NameEnv.hs  NamePolicy.hs  PrintScala2.hs  PrintScala3.hs  ScalaExpr.hs
src/Agda/Compiler/Scala/AgdaToScalaExpr/: Terms.hs  Types.hs
src/Agda/Compiler/Scala/Compile/: Terms.hs  Types.hs
src/Agda/Compiler/Scala/IR/: Agda.hs  AgdaIR.hs  Scala.hs  ScalaExpr.hs  ScalaIR.hs
src/Agda/Compiler/Scala/Lower/: AgdaToIR.hs  IRToScala.hs
src/Agda/Compiler/Scala/Name/: NameEnv.hs  NamePolicy.hs
src/Agda/Compiler/Scala/Print/: Common.hs  PrintScala2.hs  PrintScala3.hs
src/Agda/Compiler/Scala/Render/: Common.hs  PrintScala2.hs  PrintScala3.hs
test/: AgdaToScalaExprProps.hs  CompileProps.hs  HedgehogMain.hs  IRToScalaProps.hs  Main.hs  NameEnvProps.hs  NameEnvTest.hs  NamePolicyProps.hs  NamePolicyTest.hs  PrintProps.hs  PrintScala2Test.hs  PrintScala3Test.hs  Props.hs  ScalaBackendTest.hs  TermsProps.hs  Tests.hs  TypesProps.hs  TypesTest.hs
test/Compile/: TermsProps.hs  TypesProps.hs  TypesTest.hs
test/Lower/: IRToScalaProps.hs
test/Name/: NameEnvProps.hs  NameEnvTest.hs  NamePolicyProps.hs  NamePolicyTest.hs
test/Render/: CommonTest.hs  PrintProps.hs  PrintScala2Test.hs  PrintScala3Test.hs
test/Support/: Assertions.hs
