cabal-version:     3.8
-- Further docs  http://haskell.org/cabal/users-guide/
name:               agda2scala
-- See the Haskell package versioning policy (PVP) for standards
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.4
description:        Allows to export Scala source files from formal specification in Agda
license:            MIT
license-file:       LICENSE
author:             dancewithheart
maintainer:         piotr.paradzinski@gmail.com
category:           Language, Compiler
build-type:         Simple
synopsis:           Compiling Agda code to Scala.

extra-doc-files:    README.md, CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/dancewithheart/agda2scala.git

common warnings
  ghc-options: -Wall

library
  import:              warnings
  hs-source-dirs:      src
  exposed-modules:     Agda.Compiler.Scala.Backend
                       Agda.Compiler.Scala.ScalaExpr
                       Agda.Compiler.Scala.NameEnv
                       Agda.Compiler.Scala.AgdaToScalaExpr
                       Agda.Compiler.Scala.PrintScala2
                       Agda.Compiler.Scala.PrintScala3
                       Paths_agda2scala
  autogen-modules:     Paths_agda2scala
  build-depends:       base                 >= 4.13  && < 4.22,
                       containers           >  0.6   && < 0.9,
                       Agda                 >= 2.8.0 && < 2.9.0,
                       deepseq              >= 1.4.4 && < 1.6,
                       text                 >= 2.0.2 && < 2.2,
                       unordered-containers >=0.2.20 && <0.3
  default-language:    Haskell2010

executable agda2scala
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:    Paths_agda2scala
  autogen-modules:  Paths_agda2scala
  build-depends:    base   >= 4.13  && < 4.22,
                    Agda   >= 2.8.0 && < 2.9.0,
                    agda2scala
  default-language: Haskell2010

test-suite agda2scala-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:    PrintScala2Test
                    PrintScala3Test
                    ScalaBackendTest
                    NameEnvTest
  build-depends:    base   >= 4.13  && < 4.22,
                    unordered-containers >=0.2.20 && <0.3,
                    Agda   >= 2.8.0 && < 2.9.0,
                    HUnit  >= 1.6.2.0,
                    agda2scala
